# nx-db

./: .gitignore  AI_INTEGRATION.md  Cargo.toml  README.md  auth_repro.json  auth_repro.rs  bench.db  nx-db.schema.json
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
database-cache/: Cargo.toml
database-cache/src/: backend.rs  error.rs  key.rs  lib.rs  memory.rs  namespace.rs  redis.rs  types.rs
database-cli/: Cargo.toml
database-cli/src/: main.rs
database-cli/tests/: cli.rs
database-codegen/: Cargo.toml
database-codegen/src/: lib.rs
database-core/: Cargo.toml
database-core/src/: context.rs  database.rs  enums.rs  events.rs  key.rs  lib.rs  macros.rs  model.rs  query.rs  registry.rs  repository.rs  schema.rs  system_fields.rs  traits.rs  value.rs
database-core/src/errors/: core_error.rs  permission_error.rs  role_error.rs
database-core/src/traits/: codec.rs  migration.rs  storage.rs
database-core/src/utils/: permission.rs
database-derive/: Cargo.toml
database-derive/src/: lib.rs
docs/: architecture.md  codegen.md
driver-postgres/: Cargo.toml
driver-postgres/src/: driver.rs  error.rs  lib.rs  migration.rs  query.rs  utils.rs
driver-sqlite/: Cargo.toml
driver-sqlite/src/: driver.rs  error.rs  lib.rs  migration.rs  query.rs  utils.rs
examples/codegen/: filtered_models.rs  filtered_schema.json  models.rs  production_models.rs  production_schema.json  schema.json  virtual_models.rs  virtual_schema.json
nx-core/: Cargo.toml
nx-core/src/: auth.rs  collection.rs  constants.rs  context.rs  database.rs  doc.rs  enums.rs  events.rs  key.rs  lib.rs  model.rs  query.rs  registry.rs  repository.rs  schema.rs  traits.rs  value.rs
nx-core/src/auth/: authorization.rs  permission.rs  role.rs
nx-core/src/errors/: authorization_error.rs  core_error.rs  mod.rs
nx-core/src/traits/: adapter.rs  document.rs  migration.rs  resolver.rs  storage.rs
nx-core/src/utils/: authorization.rs  role.rs
src/: lib.rs
tests/: derived_models.rs  feature_matrix.rs  generated_models.rs  postgres_integration.rs  sqlite_integration.rs
