[workspace]
members = [
    ".",
    "database-core",
    "driver-postgres",
    "database-cache",
    "database-codegen",
    "database-cli",
    "benchmarks"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ravikan6/nx-db"

[package]
name = "nx-db"
version = "0.1.0"
edition = "2024"

[dependencies]
database-core = { path = "database-core" }
database-cache = { path = "database-cache" }
serde = { version = "1.0.228", features = ["derive"] }

driver-postgres = { path = "driver-postgres", optional = true }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "time"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
postgres = ["driver-postgres"]
cache-redis = ["database-cache/redis"]
