[workspace]
members = [
    ".",
    "database-core",
    "database-derive",
    "driver-postgres",
    "database-cache",
    "database-codegen",
    "database-cli",
    "benchmarks",
    "driver-sqlite"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ravikan6/nx-db"

[package]
name = "nx-db"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "A modular Rust database toolkit with core, cache, and Postgres integrations."
readme = "README.md"

[dependencies]
database-core = { path = "database-core", version = "0.1.0" }
database-derive = { path = "database-derive", version = "0.1.0" }
database-cache = { path = "database-cache", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "time"], optional = true }

driver-postgres = { path = "driver-postgres", optional = true, version = "0.1.0" }
driver-sqlite = { path = "driver-sqlite", optional = true, version = "0.1.0" }

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["postgres", "sqlite", "runtime-tokio-rustls", "time"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[features]
default = []
postgres = ["driver-postgres", "dep:sqlx", "sqlx/postgres", "database-core/postgres"]
sqlite = ["driver-sqlite", "dep:sqlx", "sqlx/sqlite", "database-core/sqlite"]
cache-redis = ["database-cache/redis"]
