[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
nx-db = { path = "..", features = ["postgres"] }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "time", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
rand = "0.8"
futures = "0.3"
dotenvy = "0.15"
