[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["postgres"]
postgres = ["nx-db/postgres", "sqlx/postgres"]
sqlite = ["nx-db/sqlite", "sqlx/sqlite"]

[dependencies]
nx-db = { path = ".." }
tokio = { version = "1.48.0", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "time", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
rand = "0.8"
futures = "0.3"
dotenvy = "0.15"
