[package]
name = "database-cache"
version = "0.1.0"
edition = "2024"

[features]
default = []
redis = ["dep:redis"]

[dependencies]
bytes = "1.10.1"
parking_lot = "0.12.3"
thiserror = "2.0.12"
moka = { version = "0.12.10", features = ["future"] }
redis = { version = "0.32.5", features = ["aio", "tokio-comp", "connection-manager"], optional = true }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
