[package]
name = "database-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
nx-db = { path = "..", features = ["postgres"] }
database-codegen = { path = "../database-codegen" }
clap = { version = "4.5.31", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
serde_json = "1.0.149"
dotenvy = "0.15.7"
