[package]
name = "database-codegen"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Code generation helpers for nx-db models and schemas."
readme = "../README.md"

[lib]
name = "database_codegen"
path = "src/lib.rs"

[dependencies]
database-core = { path = "../database-core", version = "0.1.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
