[package]
name = "database-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core domain, schema, query, and repository primitives for nx-db."
readme = "../README.md"

[dependencies]
time = { version = "0.3.47", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
bytes = "1.10.1"
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0.12"
database-cache = { path = "../database-cache", version = "0.1.0" }