[package]
name = "driver-postgres"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PostgreSQL driver and migrations for nx-db."
readme = "../README.md"

[dependencies]
database-core = { path = "../database-core", version = "0.1.0" }
sqlx = { version = "0.8.6", features = ["postgres", "time", "json"] }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.133" }
