[package]
name = "driver-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
database-core = { path = "../database-core" }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "time"] }
serde = { version = "1.0.228" }
serde_json = "1.0.133"
time = { version = "0.3.47", features = ["serde"] }
async-trait = "0.1.87"
futures = "0.3.32"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
